--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <img src="All In One Pharma.jpg" alt="">
     <h1>i am busy now
     </h1>
     <h2>so i can not reply you</h2>
