--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <img src="sddefault.jpg" alt="" srcset="">
     <p>there are so many people who are not concern about covid 19</p>
     <p>so it was very threatful for our country</p>
+    <p>Our country is so beautiful
+        <img src="orsaline_n_2_result.jpg" alt="">
+    </p>
 
 </body>
 </html>
